--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.2",
-    "socketio": "^1.0.0"
+    "socketio": "^1.0.0",
+	"npm": "14.15.4"
   }
 }
